# slicer_rs

./: .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
src/: api_docs.rs  error.rs  lib.rs  main.rs
src/calculate/: mod.rs  triangulation.rs
src/config/: env.rs  log.rs  mod.rs
src/grpc/: token.rs
src/handler/: mod.rs  model.rs
src/middleware/: auth.rs
src/model/: mod.rs  stl.rs
src/models/: error.rs  gcloud.rs  mdl.rs  mod.rs  user.rs
src/util/: gcloud.rs  mod.rs
